# pyre

./: .gitignore  2026april.html  AGENTS.md  CNAME  Cargo.toml  README.md  dist-workspace.toml  index.html  jit_glue.js  pyre_wasm.d.ts  pyre_wasm.js  pyre_wasm_bg.wasm.d.ts
majit/: COMPARISON_REPORT.md  COMPATIBILITY_MATRIX.md  Cargo.toml  README.md  SEMANTIC_SEAMS.md  countdown.tla
majit/bench/: rpython_calc.py  rpython_tlr.py  run_benchmarks.sh
majit/docs/: blackhole-port-plan.md  rpython-majit-blackhole-mapping.md
majit/examples/braininterp/: Cargo.toml
majit/examples/calc/: Cargo.toml
majit/examples/tiny2/: Cargo.toml
majit/examples/tiny3/: Cargo.toml
majit/examples/tinyframe/: Cargo.toml
majit/examples/tl/: Cargo.toml
majit/examples/tla/: Cargo.toml
majit/examples/tlc/: Cargo.toml
majit/examples/tlr/: Cargo.toml
majit/majit/: Cargo.toml
majit/majit-analyze/: Cargo.toml
majit/majit-analyze/src/: ast_transform.rs  classify.rs  codegen.rs  codewriter.rs  field_match.rs  graph.rs  interp_extract.rs  lib.rs  mjit_codegen.rs  parse.rs  patterns.rs  test_support.rs
majit/majit-backend/: Cargo.toml
majit/majit-backend-cranelift/: Cargo.toml
majit/majit-backend-cranelift/src/: compiler.rs  guard.rs  lib.rs
majit/majit-backend-cranelift/tests/: integration.rs
majit/majit-backend-dynasm/: Cargo.toml
majit/majit-backend-dynasm/src/: arch.rs  assembler.rs  callbuilder.rs  codebuf.rs  frame.rs  gcmap.rs  guard.rs  j2plan.rs  jitframe.rs  jump.rs  lib.rs  opassembler.rs  regalloc.rs  reghint.rs  regloc.rs  runner.rs
majit/majit-backend-dynasm/tests/: basic_loop.rs
majit/majit-backend-wasm/: Cargo.toml
majit/majit-backend-wasm/src/: codegen.rs  failguard.rs  js_glue.rs  lib.rs
majit/majit-backend-wasm/tests/: codegen_test.rs
majit/majit-backend/src/: jitframe.rs  lib.rs  llmodel.rs
majit/majit-codegen/: Cargo.toml
majit/majit-codegen-cranelift/: Cargo.toml
majit/majit-codegen-cranelift/src/: compiler.rs  guard.rs  lib.rs
majit/majit-codegen-cranelift/tests/: integration.rs
majit/majit-codegen/src/: lib.rs
majit/majit-codewriter/: Cargo.toml
majit/majit-codewriter/src/: assembler.rs  call.rs  call_match.rs  codegen.rs  codewriter.rs  field_match.rs  flatten.rs  format.rs  graph.rs  handler_spec.rs  hints.rs  inline.rs  jitcode.rs  jtransform.rs  layout.rs  lib.rs  liveness.rs  model.rs  parse.rs  patterns.rs  policy.rs  regalloc.rs  test_support.rs
majit/majit-flowspace/: Cargo.toml
majit/majit-flowspace/src/: argument.rs  bytecode.rs  flowcontext.rs  framestate.rs  lib.rs  model.rs  specialcase.rs
majit/majit-flowspace/tests/: test_argument.rs  test_bytecode_py314.rs  test_model.rs
majit/majit-gc/: Cargo.toml
majit/majit-gc/src/: collector.rs  header.rs  lib.rs  nursery.rs  oldgen.rs  rewrite.rs  shadow_stack.rs  trace.rs
majit/majit-ir/: Cargo.toml
majit/majit-ir/src/: descr.rs  effectinfo.rs  lib.rs  op.rs  resoperation.rs  resumecode.rs  resumedata.rs  value.rs
majit/majit-macros/: Cargo.toml
majit/majit-macros/src/: jit_struct.rs  lib.rs  virtualizable.rs  virtualizable_derive.rs
majit/majit-macros/tests/: driver_test.rs  jit_module_test.rs  jit_struct_test.rs
majit/majit-meta/: Cargo.toml
majit/majit-meta/src/: blackhole.rs  call_descr.rs  compile.rs  constant_pool.rs  driver.rs  executor.rs  fail_descr.rs  io_buffer.rs  jit_state.rs  jitcode.rs  jitdriver.rs  jitexc.rs  jitframe.rs  lib.rs  meta_interp.rs  parity.rs  pyjitpl.rs  quasi_immut.rs  resume.rs  resumecode.rs  symbolic_stack.rs  trace_ctx.rs  virtual_ref.rs  virtualizable.rs
majit/majit-meta/tests/: jit_driver_descriptor_parity.rs  jit_driver_marker_rewrite_parity.rs  jit_driver_runtime_parity.rs  jit_interp_auto_call_family_parity.rs  jit_interp_auto_call_parity.rs  jit_interp_branch_parity.rs  jit_interp_call_family_parity.rs  jit_interp_call_parity.rs  jit_interp_config_parity.rs  jit_interp_inline_helper_parity.rs  jit_interp_inline_helper_typed_return.rs  jit_interp_parity.rs  jitcode_call_parity.rs  resume_parity.rs
majit/majit-metainterp/: Cargo.toml
majit/majit-metainterp/src/: blackhole.rs  call_descr.rs  compile.rs  constant_pool.rs  executor.rs  fail_descr.rs  greenfield.rs  history.rs  jit.rs  jit_state.rs  jitdriver.rs  jitexc.rs  jitframe.rs  jitprof.rs  lib.rs  opencoder.rs  parity.rs  pyjitpl.rs  quasiimmut.rs  recorder.rs  resume.rs  resumecode.rs  rvmprof.rs  trace_ctx.rs  virtualizable.rs  virtualref.rs  walkvirtual.rs  warmstate.rs
majit/majit-metainterp/tests/: jit_driver_marker_rewrite_parity.rs  jit_driver_runtime_parity.rs  jit_interp_auto_call_family_parity.rs  jit_interp_auto_call_parity.rs  jit_interp_branch_parity.rs  jit_interp_call_family_parity.rs  jit_interp_call_parity.rs  jit_interp_config_parity.rs  jit_interp_inline_helper_parity.rs  jit_interp_inline_helper_typed_return.rs  jit_interp_parity.rs  jitcode_call_parity.rs  resume_parity.rs
majit/majit-opt/: Cargo.toml
majit/majit-opt/src/: TODO_PREAMBLE_PEELING.md  bridgeopt.rs  dependency.rs  earlyforce.rs  guard.rs  heap.rs  info.rs  intbounds.rs  intdiv.rs  intutils.rs  lib.rs  optimize.rs  optimizer.rs  preamble_peeling_patch.rs  pure.rs  rewrite.rs  schedule.rs  shortpreamble.rs  simplify.rs  unroll.rs  vector.rs  version.rs  virtualize.rs  virtualstate.rs  vstring.rs  walkvirtual.rs
majit/majit-runtime/: Cargo.toml
majit/majit-runtime/src/: lib.rs
majit/majit-trace/: Cargo.toml
majit/majit-trace/src/: counter.rs  encoding.rs  heapcache.rs  history.rs  jitlog.rs  lib.rs  logger.rs  memmgr.rs  opencoder.rs  recorder.rs  trace.rs  warmenterstate.rs  warmstate.rs
majit/majit-translate/: Cargo.toml  build.rs
majit/majit-translate/docs/: leaf-porting-work-units.md
majit/majit-translate/src/: codegen.rs  generated.rs  handler_spec.rs  inline.rs  layout.rs  (+5 more)
pyre/pyre-interp/: Cargo.toml  build.rs
pyre/pyre-interpreter/: Cargo.toml
pyre/pyre-jit/: Cargo.toml  build.rs
pyre/pyre-jit-trace/: Cargo.toml  build.rs
pyre/pyre-object/: Cargo.toml
pyre/pyre-objspace/: Cargo.toml
pyre/pyre-wasm/: Cargo.toml
pyre/pyrex/: Cargo.toml
(+532 files in other folders)
