[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace]
resolver = "2"
default-members = ["pyre/pyrex"]
members = [
    # majit
    "majit/majit",
    "majit/majit-ir",
    "majit/majit-trace",
    "majit/majit-backend",
    "majit/majit-backend-cranelift",
    "majit/majit-gc",
    "majit/majit-macros",
    "majit/majit-runtime",
    "majit/majit-metainterp",
    "majit/majit-analyze",
    "majit/examples/tlr",
    "majit/examples/tl",
    "majit/examples/tla",
    "majit/examples/tiny2",
    "majit/examples/tiny3",
    "majit/examples/tinyframe",
    "majit/examples/braininterp",
    "majit/examples/tlc",
    # pyre
    "pyre/pyre-object",
    "pyre/pyre-interpreter",
    "pyre/pyre-module",
    "pyre/pyre-jit",
    "pyre/pyre-jit-trace",
    "pyre/pyrex",
]

[workspace.dependencies]
# pyre internal crates
pyre-object = { path = "pyre/pyre-object" }
pyre-interpreter = { path = "pyre/pyre-interpreter" }

# RustPython compiler toolchain (0.5.0, pinned to main @ 2026-03-27)
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", rev = "f7556b00c18c082fd747135595a0b4cb5c5c26d3" }
rustpython-compiler-core = { git = "https://github.com/RustPython/RustPython", rev = "f7556b00c18c082fd747135595a0b4cb5c5c26d3" }

# majit JIT framework
majit-metainterp = { path = "majit/majit-metainterp" }
majit-ir = { path = "majit/majit-ir" }
majit-trace = { path = "majit/majit-trace" }

# shared dependencies
malachite-bigint = "0.9"
num-traits = "0.2"
num-integer = "0.1"
