[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/youknowone/pyre"

[workspace]
resolver = "2"
default-members = ["pyre/pyrex"]
members = [
    # majit
    "majit/majit",
    "majit/majit-ir",
    "majit/majit-trace",
    "majit/majit-backend",
    "majit/majit-backend-cranelift",
    "majit/majit-gc",
    "majit/majit-macros",
    "majit/majit-metainterp",
    "majit/majit-codewriter",
    "majit/examples/tlr",
    "majit/examples/tl",
    "majit/examples/tla",
    "majit/examples/tiny2",
    "majit/examples/tiny3",
    "majit/examples/tinyframe",
    "majit/examples/braininterp",
    "majit/examples/tlc",
    # pyre
    "pyre/pyre-object",
    "pyre/pyre-interpreter",
    "pyre/pyre-module",
    "pyre/pyre-jit",
    "pyre/pyre-jit-trace",
    "pyre/pyrex",
]

[workspace.dependencies]
# pyre internal crates
pyre-object = { path = "pyre/pyre-object" }
pyre-interpreter = { path = "pyre/pyre-interpreter" }

# RustPython compiler toolchain
rustpython-compiler = "0.5.0"
rustpython-compiler-core = "0.5.0"

# majit JIT framework
majit-metainterp = { path = "majit/majit-metainterp" }
majit-ir = { path = "majit/majit-ir" }
majit-trace = { path = "majit/majit-trace" }

# shared dependencies
malachite-bigint = "0.9"
num-traits = "0.2"
num-integer = "0.1"
