[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/youknowone/pyre"
homepage = "https://github.com/youknowone/pyre"

[workspace]
resolver = "2"
default-members = ["pyre/pyrex"]
members = [
    # majit
    "majit/majit",
    "majit/majit-ir",
    "majit/majit-trace",
    "majit/majit-backend",
    "majit/majit-backend-cranelift",
    "majit/majit-backend-wasm",
    "majit/majit-gc",
    "majit/majit-macros",
    "majit/majit-metainterp",
    "majit/majit-codewriter",
    "majit/examples/tlr",
    "majit/examples/tl",
    "majit/examples/tla",
    "majit/examples/tiny2",
    "majit/examples/tiny3",
    "majit/examples/tinyframe",
    "majit/examples/braininterp",
    "majit/examples/tlc",
    # pyre
    "pyre/pyre-object",
    "pyre/pyre-interpreter",
    "pyre/pyre-module",
    "pyre/pyre-jit",
    "pyre/pyre-jit-trace",
    "pyre/pyrex",
    "pyre/pyre-wasm",
    "pyre/pyre-wasm-test",
]

[workspace.dependencies]
# pyre internal crates
pyre-object = { version = "0.0.1", path = "pyre/pyre-object" }
pyre-interpreter = { version = "0.0.1", path = "pyre/pyre-interpreter" }
pyre-module = { version = "0.0.1", path = "pyre/pyre-module" }
pyre-jit = { version = "0.0.1", path = "pyre/pyre-jit" }
pyre-jit-trace = { version = "0.0.1", path = "pyre/pyre-jit-trace" }
pyre-wasm = { version = "0.0.1", path = "pyre/pyre-wasm" }
pyrex = { version = "0.0.1", path = "pyre/pyrex" }

# RustPython compiler toolchain
rustpython-compiler = "0.5.0"
rustpython-compiler-core = "0.5.0"

# majit JIT framework
majit = { version = "0.0.1", path = "majit/majit" }
majit-metainterp = { version = "0.0.1", path = "majit/majit-metainterp" }
majit-ir = { version = "0.0.1", path = "majit/majit-ir" }
majit-trace = { version = "0.0.1", path = "majit/majit-trace" }
majit-backend = { version = "0.0.1", path = "majit/majit-backend" }
majit-backend-cranelift = { version = "0.0.1", path = "majit/majit-backend-cranelift" }
majit-backend-wasm = { version = "0.0.1", path = "majit/majit-backend-wasm" }
majit-gc = { version = "0.0.1", path = "majit/majit-gc" }
majit-macros = { version = "0.0.1", path = "majit/majit-macros" }
majit-codewriter = { version = "0.0.1", path = "majit/majit-codewriter" }

# shared dependencies
malachite-bigint = "0.9"
num-traits = "0.2"
num-integer = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
