[workspace]
resolver = "2"
members = [
    "majit-ir",
    "majit-opt",
    "majit-trace",
    "majit-codegen",
    "majit-codegen-cranelift",
    "majit-gc",
    "majit-macros",
    "majit-runtime",
    "examples/tlr",
    "examples/tl",
    "examples/tla",
    "examples/tiny2",
    "examples/tiny3",
    "examples/tinyframe",
]
