[package]
name = "majit-backend-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cranelift code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-backend = { path = "../majit-backend" }
majit-gc = { path = "../majit-gc" }
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

[dev-dependencies]
majit-metainterp = { path = "../majit-metainterp" }
majit-trace = { path = "../majit-trace" }
smallvec = "1"
