[package]
name = "majit-backend-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cranelift code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-codewriter = { workspace = true }
majit-gc = { workspace = true }
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"
stacker = "0.1"

[dev-dependencies]
majit-trace = { workspace = true }
smallvec = "1"
