[package]
name = "majit-backend-dynasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynasm code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-codewriter = { workspace = true }
majit-gc = { workspace = true }
dynasm = "5"
dynasmrt = "5"
libc = "0.2"

[dev-dependencies]
majit-trace = { workspace = true }
