[package]
name = "majit-codegen-cranelift"
version = "0.1.0"
edition = "2021"

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-codegen = { path = "../majit-codegen" }
majit-gc = { path = "../majit-gc" }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"
