[package]
name = "majit-codegen-cranelift"
version.workspace = true
edition.workspace = true

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-codegen = { path = "../majit-codegen" }
majit-gc = { path = "../majit-gc" }
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

[dev-dependencies]
majit-metainterp = { path = "../majit-metainterp" }
majit-trace = { path = "../majit-trace" }
smallvec = "1"
