[package]
name = "majit-codewriter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JIT code generation pipeline — RPython's codewriter in Rust"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
majit-ir = { path = "../majit-ir" }
