[package]
name = "majit-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
majit-runtime = { path = "../majit-runtime" }

[dev-dependencies]
majit-ir = { path = "../majit-ir" }
majit-metainterp = { path = "../majit-metainterp" }
