[package]
name = "majit-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for majit JIT integration"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
majit-ir = { path = "../majit-ir" }
majit-metainterp = { path = "../majit-metainterp" }
