[package]
name = "majit-metainterp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Meta-interpreter and optimizer for majit JIT compiler"

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-trace = { path = "../majit-trace" }
majit-backend = { path = "../majit-backend" }
majit-backend-cranelift = { path = "../majit-backend-cranelift" }
majit-gc = { path = "../majit-gc" }

[dev-dependencies]
majit-macros = { path = "../majit-macros" }
majit-gc = { path = "../majit-gc" }
smallvec = "1"
