[package]
name = "majit-metainterp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Meta-interpreter and optimizer for majit JIT compiler"

[features]
dynasm = ["dep:majit-backend-dynasm"]

[dependencies]
majit-ir = { workspace = true }
majit-trace = { workspace = true }
majit-backend = { workspace = true }
majit-gc = { workspace = true }
majit-backend-dynasm = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
majit-backend-wasm = { workspace = true }

[dev-dependencies]
majit-macros = { workspace = true }
majit-gc = { workspace = true }
smallvec = "1"
