[package]
name = "majit"
version.workspace = true
edition.workspace = true
description = "Meta-tracing JIT compiler framework"

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-metainterp = { path = "../majit-metainterp" }
majit-trace = { path = "../majit-trace" }
majit-codegen = { path = "../majit-codegen" }
majit-codegen-cranelift = { path = "../majit-codegen-cranelift" }
majit-gc = { path = "../majit-gc" }
majit-runtime = { path = "../majit-runtime" }
majit-macros = { path = "../majit-macros" }
