[package]
name = "majit"
version.workspace = true
edition.workspace = true
description = "Meta-tracing JIT compiler framework"

[dependencies]
majit-ir = { path = "../majit-ir" }
majit-metainterp = { path = "../majit-metainterp" }
majit-trace = { path = "../majit-trace" }
majit-backend = { path = "../majit-backend" }
majit-backend-cranelift = { path = "../majit-backend-cranelift" }
majit-gc = { path = "../majit-gc" }
majit-macros = { path = "../majit-macros" }
