[package]
name = "majit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Meta-tracing JIT compiler framework"

[features]
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]

[dependencies]
majit-ir = { workspace = true }
majit-metainterp = { workspace = true }
majit-trace = { workspace = true }
majit-backend = { workspace = true }
majit-backend-cranelift = { workspace = true }
majit-gc = { workspace = true }
majit-macros = { workspace = true }
