[package]
name = "pyre-interp"
version.workspace = true
edition.workspace = true

[dependencies]
pyre-object = { workspace = true }
pyre-runtime = { workspace = true }
pyre-objspace = { workspace = true }
pyre-bytecode = { workspace = true }
pyre-jit = { workspace = true }
majit-meta = { workspace = true }
majit-ir = { workspace = true }
num-traits = "0.2"
