[package]
name = "pyre-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bytecode interpreter for pyre"

[features]
default = ["host_env"]
host_env = []
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]

[dependencies]
pyre-object = { workspace = true }
majit-gc = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
rustpython-compiler = { workspace = true }
rustpython-compiler-core = { workspace = true }
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
pymath = { version = "0.2.0", features = ["malachite-bigint"] }
sre-engine = { package = "rustpython-sre_engine", git = "https://github.com/RustPython/RustPython.git", rev = "b80c2bd5ecedacc23a04c28e5f6dcb82b5616e88" }
libc = "0.2"
