[package]
name = "pyre-jit-trace"
version.workspace = true
edition.workspace = true
description = "Trace-time JIT for pyre — MIFrame and tracing logic, isolated from eval_loop_jit compilation unit"

[dependencies]
pyre-object = { path = "../pyre-object" }
pyre-interpreter = { path = "../pyre-interpreter" }
majit-ir = { path = "../../majit/majit-ir" }
majit-metainterp = { path = "../../majit/majit-metainterp" }
majit-backend = { path = "../../majit/majit-backend" }
majit-backend-cranelift = { path = "../../majit/majit-backend-cranelift" }
majit-trace = { path = "../../majit/majit-trace" }
majit-gc = { path = "../../majit/majit-gc" }

[build-dependencies]
majit-codewriter = { path = "../../majit/majit-codewriter" }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
