[package]
name = "pyre-jit-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace-time JIT for pyre — MIFrame and tracing logic"

[dependencies]
pyre-object = { path = "../pyre-object" }
pyre-interpreter = { path = "../pyre-interpreter" }
majit-ir = { path = "../../majit/majit-ir" }
majit-metainterp = { path = "../../majit/majit-metainterp" }
majit-backend = { path = "../../majit/majit-backend" }
majit-trace = { path = "../../majit/majit-trace" }
majit-gc = { path = "../../majit/majit-gc" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { path = "../../majit/majit-backend-cranelift" }

[build-dependencies]
majit-codewriter = { path = "../../majit/majit-codewriter" }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
