[package]
name = "pyre-jit-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace-time JIT for pyre — MIFrame and tracing logic"

[features]
default = []
cranelift = ["dep:majit-backend-cranelift", "majit-metainterp/cranelift"]
dynasm = ["dep:majit-backend-dynasm", "majit-metainterp/dynasm"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
majit-codewriter = { workspace = true }
majit-backend = { workspace = true }
majit-trace = { workspace = true }
majit-gc = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { workspace = true, optional = true }
majit-backend-dynasm = { workspace = true, optional = true }

[build-dependencies]
majit-codewriter = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
