[package]
name = "pyre-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JIT compiler integration for pyre interpreter"

[dependencies]
pyre-object = { path = "../pyre-object" }
pyre-interpreter = { path = "../pyre-interpreter" }
majit-ir = { path = "../../majit/majit-ir" }
majit-metainterp = { path = "../../majit/majit-metainterp" }
majit-backend = { path = "../../majit/majit-backend" }
majit-trace = { path = "../../majit/majit-trace" }
majit-gc = { path = "../../majit/majit-gc" }
pyre-jit-trace = { path = "../pyre-jit-trace" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { path = "../../majit/majit-backend-cranelift" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
majit-backend-wasm = { path = "../../majit/majit-backend-wasm" }
