[package]
name = "pyre-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JIT compiler integration for pyre interpreter"

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
majit-ir = { workspace = true }
majit-metainterp = { workspace = true }
majit-backend = { workspace = true }
majit-trace = { workspace = true }
majit-gc = { workspace = true }
pyre-jit-trace = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
majit-backend-wasm = { workspace = true }
