[package]
name = "pyre-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JIT compiler integration for pyre interpreter"

[features]
jit = []  # meta feature: enabled by cranelift or dynasm
cranelift = ["jit", "majit-backend-cranelift"]
dynasm = ["jit", "majit-metainterp/dynasm"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
majit-codewriter = { workspace = true }
majit-backend = { workspace = true }
majit-trace = { workspace = true }
majit-gc = { workspace = true }
pyre-jit-trace = { workspace = true }
majit-backend-cranelift = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
majit-backend-wasm = { workspace = true }
