[package]
name = "pyre-objspace"
version.workspace = true
edition.workspace = true

[dependencies]
pyre-object = { workspace = true }
pyre-runtime = { workspace = true }
pyre-bytecode = { workspace = true }
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
