[package]
name = "pyre-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "pyre Python interpreter compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
pyre-jit = { workspace = true }
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
