[package]
name = "pyrex"
version.workspace = true
edition.workspace = true
description = "pyre executable — Python Yet Reforged Entirely"

[[bin]]
name = "pyre"
path = "src/main.rs"

[dependencies]
pyre-object = { workspace = true }
pyre-bytecode = { workspace = true }
pyre-interpreter = { workspace = true }
pyre-jit = { path = "../pyre-jit" }
majit-metainterp = { path = "../../majit/majit-metainterp" }
lexopt = "0.3"
