[package]
name = "pyrex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "pyre executable — Python Rewritten"

[[bin]]
name = "pyre"
path = "src/main.rs"

[features]
default = ["cranelift"]
jit = []  # meta feature: enabled by cranelift or dynasm
cranelift = ["jit", "pyre-jit/cranelift"]
dynasm = ["jit", "pyre-jit/dynasm"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
pyre-jit = { workspace = true }
majit-metainterp = { workspace = true }
lexopt = "0.3"
