[package]
name = "tiny2"
version = "0.1.0"
edition = "2021"

[dependencies]
majit-ir = { path = "../../majit-ir" }
majit-trace = { path = "../../majit-trace" }
majit-opt = { path = "../../majit-opt" }
majit-codegen = { path = "../../majit-codegen" }
majit-codegen-cranelift = { path = "../../majit-codegen-cranelift" }
