[package]
name = "tla"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["cranelift"]
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]

[dependencies]
majit-ir = { workspace = true }
majit-metainterp = { workspace = true }
majit-macros = { workspace = true }
