[package]
name = "tlc"
version.workspace = true
edition.workspace = true

[dependencies]
majit-ir = { path = "../../majit-ir" }
majit-trace = { path = "../../majit-trace" }
majit-opt = { path = "../../majit-opt" }
majit-codegen = { path = "../../majit-codegen" }
majit-codegen-cranelift = { path = "../../majit-codegen-cranelift" }
